Convert weighted probability to use List
It's been bugging me that it needlessly uses Dequeue. Unfortunately we're on older Java so no List.getFirst/Last but really it's fine, there were only 3 calls.

We've never used this thing like a Queue so there's no good reason for it to be implemented as such.